# validate_pgp_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md5  docker-entrypoint.sh  start_docker.sh
etc/: validate_pgp_server.json
src/: lib.rs  main.rs  validate_certificate.rs
src/validate_certificate/: config.rs  sslserver.rs  validate.rs
tests/: common.rs  integration_test01.rs  integration_test02.rs  integration_test03.rs
tests/eng_tests/: auth-test  start_binary.sh  test.sh
tests/eng_tests/conf/: validate_pgp_server.json
